// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatetimeText renders loading state 1`] = `null`;

exports[`DatetimeText renders without error 1`] = `
<TextInput
  allowFontScaling={true}
  animatedProps={
    {
      "text": "Thursday, November 1st, 2023",
    }
  }
  editable={false}
  maxFontSizeMultiplier={1.4}
  style={
    [
      [
        {
          "color": "#7D7D7D",
          "fontFamily": "Inter-Medium",
          "fontSize": 17,
          "lineHeight": 24,
        },
      ],
    ]
  }
  underlineColorAndroid="transparent"
  value="Thursday, November 1st, 2023"
/>
`;

exports[`PriceText renders loading state 1`] = `
<View
  onLayout={[Function]}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "position": "relative",
          },
        ]
      }
    >
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
      >
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.2}
          style={
            [
              {
                "color": "transparent",
                "display": "flex",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 40,
                "lineHeight": 48,
                "opacity": 0,
              },
            ]
          }
        >
          $10,000
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#F9F9F9",
              "borderRadius": 4,
              "bottom": "5%",
              "display": "flex",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": "5%",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`PriceText renders without error 1`] = `
<View
  style={
    [
      {
        "display": "flex",
        "flexDirection": "row",
      },
    ]
  }
  testID="price-text"
>
  <TextInput
    allowFontScaling={true}
    animatedProps={
      {
        "text": "$55",
      }
    }
    editable={false}
    maxFontSizeMultiplier={1.2}
    style={
      [
        [
          {
            "color": "#222222",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 40,
            "lineHeight": 48,
          },
          {
            "color": "#222222",
          },
        ],
      ]
    }
    testID="wholePart"
    underlineColorAndroid="transparent"
    value="$55"
  />
  <TextInput
    allowFontScaling={true}
    animatedProps={
      {
        "text": ".00",
      }
    }
    editable={false}
    maxFontSizeMultiplier={1.2}
    style={
      [
        [
          {
            "color": "#222222",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 40,
            "lineHeight": 48,
          },
          {
            "color": "#CECECE",
          },
        ],
      ]
    }
    testID="decimalPart"
    underlineColorAndroid="transparent"
    value=".00"
  />
</View>
`;

exports[`PriceText renders without error less than a dollar 1`] = `
<View
  style={
    [
      {
        "display": "flex",
        "flexDirection": "row",
      },
    ]
  }
  testID="price-text"
>
  <TextInput
    allowFontScaling={true}
    animatedProps={
      {
        "text": "$0",
      }
    }
    editable={false}
    maxFontSizeMultiplier={1.2}
    style={
      [
        [
          {
            "color": "#222222",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 40,
            "lineHeight": 48,
          },
          {
            "color": "#222222",
          },
        ],
      ]
    }
    testID="wholePart"
    underlineColorAndroid="transparent"
    value="$0"
  />
  <TextInput
    allowFontScaling={true}
    animatedProps={
      {
        "text": ".0500",
      }
    }
    editable={false}
    maxFontSizeMultiplier={1.2}
    style={
      [
        [
          {
            "color": "#222222",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 40,
            "lineHeight": 48,
          },
          {
            "color": "#222222",
          },
        ],
      ]
    }
    testID="decimalPart"
    underlineColorAndroid="transparent"
    value=".0500"
  />
</View>
`;

exports[`RelativeChangeText renders loading state 1`] = `
<View
  onLayout={[Function]}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "position": "relative",
          },
        ]
      }
    >
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
      >
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "color": "transparent",
                "display": "flex",
                "fontFamily": "Inter-Medium",
                "fontSize": 17,
                "lineHeight": 24,
                "opacity": 0,
              },
            ]
          }
        >
          00.00%
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#F9F9F9",
              "borderRadius": 4,
              "bottom": "5%",
              "display": "flex",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": "5%",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`RelativeChangeText renders without error 1`] = `
<View
  sentry-label="Flex"
  style={
    [
      {
        "alignItems": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      },
    ]
  }
>
  <svg
    data-file-name="SvgArrowChange"
    height={16}
    strokeWidth={2}
    style={
      {
        "color": "#40B66B",
        "transform": [
          {
            "rotate": "180deg",
          },
        ],
      }
    }
    width={16}
  />
  <View
    style={
      [
        {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 2,
          "width": 2,
        },
      ]
    }
  />
  <TextInput
    allowFontScaling={true}
    animatedProps={
      {
        "text": "55.00%",
      }
    }
    editable={false}
    maxFontSizeMultiplier={1.4}
    style={
      [
        [
          {
            "color": "#222222",
            "fontFamily": "Inter-Medium",
            "fontSize": 17,
            "lineHeight": 24,
          },
          {
            "color": "#40B66B",
          },
        ],
      ]
    }
    testID="relative-change-text"
    underlineColorAndroid="transparent"
    value="55.00%"
  />
</View>
`;
